--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <img src="p9.jpg" onclick="showPopup(this.src)">
             <img src="p11.jpg" onclick="showPopup(this.src)">
             <img src="p5.jpg" onclick="showPopup(this.src)">
-            <img src="p12.jpg" onclick="showPopup(this.src)">
+            <img src="p12.jpg" onclick="showPopup(this.src)" "alt="gambar">
         </div>
     </div>
 
